# libposix

./: CMakeLists.txt  Makefile  auto_fd.cc  auto_pipe.cc  module.cc  posix_error.cc  process.cc  unit_test.cc
include/: libposix.hh
